--- a/style.css
+++ b/style.css
@@ -1,211 +1,251 @@
-*,
-*::before,
-*::after {
-  --darkest-gray: #020617;
-  --gray: #1e293b;
-  --primary-color: #69e41c;
-  --primary-color-hover: #26ab14;
-  --light-gray: #cbe1d0;
+
+*{
+    margin:0px;
+    padding:0px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-body {
-  background-color: var(--darkest-gray);
-  font-size: 1.125rem;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.5;
-  color: var(--light-gray);
+
+body{
+    margin:1.5rem 3rem;
+    background-color: aliceblue;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 450px;
-  min-height: 100vh;
-  margin: auto;
+header{
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);   
+    margin: 0 auto;
+    background-color: aliceblue;
 }
 
-.alert {
-  visibility: hidden;
-  margin-bottom: 1rem;
+header #title{
+    height: 3rem;
+    font-size: 40px;
+    font-weight: 100;
+    color: black;
+    text-align: center;
+    text-shadow: 2px 2px 5px grey;
 }
 
-.top-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 1.25rem 2rem;
-  background-color: var(--gray);
-  border-radius: 0.625rem;
+.nav{
+    height:60px;
+    margin: 10px 0px;
+    padding:5px;
+
+    border-radius: 10px;
+    /*border: 2px solid grey;*/
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
+    /*background-color: antiquewhite;*/
 }
 
-.top-bar .password {
-  font-size: 1.5rem;
-  font-weight: 400;
-  color: #fff;
-  letter-spacing: 0.1rem;
+nav form{
+    height :60px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.top-bar .copy-btn {
-  cursor: pointer;
-  font-size: 1.625rem;
+input[type=radio] {
+    width: 5%;
+    height: 2em;
 }
 
-.top-bar .copy-btn:hover {
-  color: var(--primary-color);
+.I{
+    
+    width: 650px;
+    
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 15px;
+
+    font-size: 30px ;
+    text-shadow: 2px 2px 5px grey;
+
+    border-radius: 10px;
+    /*border: 2px solid grey;*/
+    background-color: aliceblue;
+
+
 }
 
-.form-container {
-  width: 100%;
-  margin-top: 1.25rem;
-  padding: 1.25rem 2rem;
-  background-color: var(--gray);
-  border-radius: 0.625rem;
+.I:hover{
+    background-color: aqua;
 }
 
-.form-container .password-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+.middle{
+    height: 105rem;
+    max-height: 600px;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+        
+    border-radius: 10px;
+    /*border: 2px solid grey;*/
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
+    
 }
 
-.slider-container {
-  width: 100%;
+.middle section{
+    height: 100%;
+    width: 60%;
+    /*max-height: 500px;
+    max-width:700px;*/
+    
+    margin-right: 5%;
+    display: flex;
+
+    /*border-radius: 10px;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); */
 }
 
-.slider-container .label-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+#myForm{
+    height: 100%;
+    width: 100%;
+    /*max-height:400px;
+    max-width:600px;*/
+    margin: 1.875rem 3.125rem;
+    font-size:large;
+
+    display: flex;
+    flex-direction: column;
+
 }
 
-.slider-container .label-container label {
-  font-size: 1rem;
+#myForm #princi{
+    padding-left: 2rem;
+    
 }
 
-.slider-container .label-container span {
-  font-size: 1.625rem;
-  color: var(--primary-color);
+#myForm input[type=number]{
+    height: 35px;
+    width: 90%;
+    /*max-width: 550px;*/
+
+    border-radius: 5px;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
+
 }
 
-input[type='range'] {
-  -webkit-appearance: none;
-  appearance: none;
-  outline: none;
-  overflow: hidden;
-  width: 100%;
-  height: 1.25rem;
-  margin-top: 0.5rem;
-  background: var(--gray);
-  cursor: pointer;
-  border-radius: 1rem;
+#time{
+    padding-left: 2rem;
+    padding-bottom: 5px;
+
+    display: flex;
 }
 
-input[type='range']::-webkit-slider-runnable-track {
-  height: 1.25rem;
-  background: var(--gray);
+#myForm .timeInterval{
+    padding: 1rem 0rem 2rem 2rem;
+    border-radius: 5px;
+    /*border: 2px solid grey;*/
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 }
 
-input[type='range']::-moz-range-track {
-  height: 1.25rem;
-  background: var(--gray);
+#myForm #warning{
+    font-size: x-small;
+    color: red;
+    height: fit-content;
+    margin-block-start: auto;
+    margin-left: 1rem;
 }
 
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  box-shadow: -410px 0 0 400px var(--primary-color);
-  width: 1.25rem;
-  height: 1.25rem;
-  background-color: var(--gray);
-  border: 2px solid var(--primary-color);
-  border-radius: 50%;
+#myForm input[type=date]{
+    height: 35px;
+    width: 90%;
+    /*max-width: 550px;*/
+
+    border-radius: 5px;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 }
 
-input[type='range']::-moz-range-thumb {
-  width: 2rem;
-  height: 2rem;
-  background-color: var(--gray);
-  border: 1px solid var(--primary-color);
-  border-radius: 50%;
+#myForm #or{
+    padding:0% 50%;
+}
+#myForm .dates #loanTakenDateLabel{
+    display: flex;
+}
+#myForm .dates #loanTakenDate_validity{
+    font-size: x-small;
+    color: red;
+    height: fit-content;
+    margin-block-start: auto;
+    margin-left: 1rem;
+    /*margin:0.625rem 1.875rem;*/
+    /*padding:0.5rem 1.5rem;*/
 }
 
-.switch-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+#myForm .dates #loanRepaidDateLabel{
+    display: flex;
 }
 
-.switch-container span {
-  font-size: 1rem;
+#myForm .dates #loanRepaidDate_validity{
+    font-size: x-small;
+    color: red;
+    height: fit-content;
+    margin-block-start: auto;
+    margin-left: 1rem;
 }
 
-.toggle-switch {
-  display: inline-block;
-  position: relative;
-  width: 51px;
-  height: 30px;
+section .submit #calculate{
+    height: 25px;
+    width: 100px;
+    margin: 30px 10px;
+
+    border-radius: 5px;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 }
 
-.toggle-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+aside{
+    height: 50%;
+    /*height:350px ;*/
+    width:50% ;
+    max-width: 500px;
+    margin: 10rem 2rem;
+
+    /*display: flex;
+    flex-direction: column;
+    justify-items: space-between;*/
+
+
+    border-radius: 10px;
+    border: 2px solid grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
+    background-color: aliceblue;
 }
 
-.toggle-slider {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: var(--gray);
-  cursor: pointer;
-  border-radius: 2rem;
-  transition: 0.2s;
+aside h1{
+    margin: 10px 50px;
 }
 
-.toggle-slider:before {
-  content: '';
-  position: absolute;
-  bottom: 3px;
-  left: 3px;
-  width: 24px;
-  height: 24px;
-  background-color: white;
-  border-radius: 50%;
-  transition: 0.2s;
+aside .Result{
+    height: 50%;
+    width: 60%;
+    max-height: 250px;
+    max-width: 400px;
+    margin: 1rem 5rem ;
+    padding: 2rem;
+
+    background-color: blue;
 }
 
-input:checked + .toggle-slider {
-  background-color: var(--primary-color);
+aside .Result .interestAmount{
+    display: flex;
 }
 
-input:checked + .toggle-slider:before {
-  transform: translateX(22px);
+aside .Result .totalAmount{
+    display: flex;
 }
 
-.submit-btn {
-  outline: none;
-  display: inline-block;
-  width: 100%;
-  padding: 1.25rem 1rem;
-  background-color: var(--primary-color);
-  cursor: pointer;
-  border: none;
-  border-radius: 0.25rem;
-  font-size: 1.25rem;
-  font-weight: 700;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 0.075rem;
-}
 
-.submit-btn:hover {
-  background-color: var(--primary-color-hover);
-}
+
+
+
